--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@headlessui/react": "^1.7.17",
     "@monaco-editor/react": "^4.6.0",
     "@types/node": "20.5.1",
@@ -28,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-json-tree": "^0.19.0",
+    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
