--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "json-edit-react": "^1.16.3",
     "next": "^14.2.3",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
